--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "astro": "^5.1.10"
   },
   "devDependencies": {
+    "@astrojs/sitemap": "^3.2.1",
     "@tailwindcss/vite": "^4.0.0",
     "prettier": "^3.4.2",
     "prettier-plugin-astro": "^0.14.1",
